[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/Start.gd" type="Script" id=1]
[ext_resource path="res://assets/Russo_One.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/UI/grey_button00.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 51
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 2 )

[node name="Start" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 59.0
custom_constants/margin_top = 184

[node name="Label" type="Label" parent="MarginContainer"]
margin_top = 184.0
margin_right = 1024.0
margin_bottom = 243.0
custom_fonts/font = SubResource( 1 )
text = "Memory challenge!"
align = 1
valign = 1

[node name="ControlContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -95.0
margin_right = 115.0
custom_constants/margin_top = 253

[node name="VBoxContainer" type="VBoxContainer" parent="ControlContainer"]
margin_top = 253.0
margin_right = 210.0
margin_bottom = 600.0

[node name="MarginContainer2" type="MarginContainer" parent="ControlContainer/VBoxContainer"]
editor/display_folded = true
margin_right = 210.0
margin_bottom = 50.0
custom_constants/margin_right = 10
custom_constants/margin_top = 15
custom_constants/margin_left = 10
custom_constants/margin_bottom = 0

[node name="Label" type="Label" parent="ControlContainer/VBoxContainer/MarginContainer2"]
margin_left = 10.0
margin_top = 15.0
margin_right = 200.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 2 )
text = "1 Player"
align = 1
valign = 1

[node name="MarginContainer5" type="MarginContainer" parent="ControlContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 210.0
margin_bottom = 70.0

[node name="HSlider" type="HSlider" parent="ControlContainer/VBoxContainer/MarginContainer5"]
margin_right = 210.0
margin_bottom = 16.0
min_value = 1.0
max_value = 4.0
value = 1.0

[node name="HSeparator" type="HSeparator" parent="ControlContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 210.0
margin_bottom = 78.0

[node name="MarginContainer4" type="MarginContainer" parent="ControlContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 210.0
margin_bottom = 132.0
custom_constants/margin_right = 10
custom_constants/margin_top = 15
custom_constants/margin_left = 10
custom_constants/margin_bottom = 0

[node name="CardLbl" type="Label" parent="ControlContainer/VBoxContainer/MarginContainer4"]
margin_left = 10.0
margin_top = 15.0
margin_right = 200.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 2 )
text = "16 cards"
align = 1
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="ControlContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 210.0
margin_bottom = 152.0

[node name="CardSlider" type="HSlider" parent="ControlContainer/VBoxContainer/MarginContainer3"]
margin_right = 210.0
margin_bottom = 16.0
min_value = 16.0
max_value = 40.0
step = 4.0
value = 16.0

[node name="HSeparator2" type="HSeparator" parent="ControlContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 210.0
margin_bottom = 160.0

[node name="MarginContainer" type="MarginContainer" parent="ControlContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 210.0
margin_bottom = 234.0
custom_constants/margin_right = 10
custom_constants/margin_top = 15
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="NewGame" type="TextureButton" parent="ControlContainer/VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 15.0
margin_right = 200.0
margin_bottom = 60.0
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="ControlContainer/VBoxContainer/MarginContainer/NewGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.86
margin_top = -15.27
margin_right = 60.14
margin_bottom = 13.73
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "New game"
align = 1
valign = 1
[connection signal="value_changed" from="ControlContainer/VBoxContainer/MarginContainer5/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="ControlContainer/VBoxContainer/MarginContainer3/CardSlider" to="." method="_on_CardSlider_value_changed"]
[connection signal="pressed" from="ControlContainer/VBoxContainer/MarginContainer/NewGame" to="." method="_on_NewGame_pressed"]
